Fix input border color (temporarily add !important) and spacing classes
Previously, the classes for uniform margin and padding were created as `margin--normal` instead of `margin-normal`

--- a/src/styles/bulma/form/shared.sass
+++ b/src/styles/bulma/form/shared.sass
@@ -40,12 +40,12 @@ $input-radius: $radius !default
     color: $input-placeholder-color
   &:hover,
   &.is-hovered
-    border-color: $input-hover-border-color
+    border-color: $input-hover-border-color!important
   &:focus,
   &.is-focused,
   &:active,
   &.is-active
-    border-color: $input-focus-border-color
+    border-color: $input-focus-border-color!important
     box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color
   &[disabled],
   fieldset[disabled] &
