--- a/src/styles/bulma/helpers/spacing.sass
+++ b/src/styles/bulma/helpers/spacing.sass
@@ -13,7 +13,7 @@ $spacing-values: ('0': 0, 'smaller': $space-smaller, 'small': $space-small, 'nor
 @each $property, $shortcut in $spacing-shortcuts
   @each $name, $value in $spacing-values
     // All directions
-    .#{$shortcut}-#{$name}
+    .#{$shortcut}#{$name}
       #{$property}: $value !important
     // Cardinal directions
     @each $direction, $suffix in $spacing-directions
